# nnmbot

./: main.py  pyproject.toml  users.db
mechanic/: db.py  pars.py
