[tool.poetry]
name = "repl_python3_nnmbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
aiohttp-socks = "^0.6.0"
bs4 = "^0.0.1"
SQLAlchemy = "^1.4.22"
aiogram = "^2.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
